apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'groovy'
apply plugin: 'application'

repositories {
    mavenCentral()
    jcenter()
    maven { url "https://repo.spring.io/snapshot" }
    maven { url "https://repo.spring.io/milestone" }
}


dependencies {
    compile('ch.qos.logback:logback-classic:1.2.3')
    compile('com.google.guava:guava:29.0-jre')
    testCompile('junit:junit:4.12')
    testCompile('org.assertj:assertj-core:3.16.1')
    testCompile('org.codehaus.groovy:groovy-all:2.5.11')
    testCompile('org.spockframework:spock-core:1.3-groovy-2.5')
    testCompile('nl.jqno.equalsverifier:equalsverifier:3.2')
    testCompile('org.mockito:mockito-core:2.3.5')
    testCompile('org.awaitility:awaitility:4.0.2')
    testCompile('com.xebialabs.restito:restito:0.9.3')
}

sourceCompatibility = 14

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

compileJava {
    options.forkOptions.jvmArgs += "--enable-preview"
}

mainClassName = "com.piotrglazar.ExampleRunner"
tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
}
